<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cl.ConstraintDemoActivity">

    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header"
        tools:srcCompat="@drawable/header" />

    <ImageView
        android:id="@+id/imageViewPoster"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewHeader"
        app:layout_constraintDimensionRatio="w,2:3"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHeader"
        app:srcCompat="@drawable/poster" />

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/beauty_and_the_beast"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toEndOf="@+id/imageViewPoster"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHeader"
        tools:text="@string/beauty_and_the_beast" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/bookmark_movie"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHeader"
        app:srcCompat="@drawable/ic_bookmark" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/textViewMetadata"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="11dp"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@+id/imageViewPoster"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeading"
        tools:text="PG13 | Comedy | 113 minutes" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imageViewPoster,textViewMetadata"
        tools:layout_editor_absoluteY="731dp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rent_rs_29"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        tools:text="@string/rent_rs_29" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/buy_rs_129"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        tools:text="@string/buy_rs_129" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="button,button2"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="731dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        app:srcCompat="@drawable/ic_bookmark" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        app:srcCompat="@drawable/ic_family" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/ratings"
        android:focusable="true"
        app:backgroundTint="@color/secondaryBackgroundTint"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton3"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        app:srcCompat="@drawable/tomato" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/similar"
        android:focusable="true"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        app:srcCompat="@drawable/ic_similar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ratings"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton2"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2"
        tools:text="@string/ratings" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:text="@string/family"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton3"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton3"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton3"
        tools:text="@string/family" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rating_percent"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton4"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton4"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton4"
        tools:text="@string/rating_percent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/similar"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton5"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton5"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton5"
        tools:text="@string/similar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="floatingActionButton4,textView5,textView4,floatingActionButton3,floatingActionButton5,textView6,textView3,floatingActionButton2"
        tools:layout_editor_absoluteY="731dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/barrier3"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/template_movie_description"
        tools:text="@string/template_movie_description" />

    <!--tools:srcCompat="@tools:sample/backgrounds/scenic"-->
</androidx.constraintlayout.widget.ConstraintLayout>